--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,12 @@ services:
 
 before_install:
   - echo "start Creating an image with dockerfile"
-  - docker build -t namsick96/docker-react-app:latest -f Dockerfile.dev .
+  - docker build -t namsick96/docker-react-app -f Dockerfile.dev .
 
 script:
   - docker run -e CI=true namsick96/docker-react-app npm run test -- --coverage
 
 deploy:
-  edge: true
   provider: elasticbeanstalk
   region: ap-northeast-2
   app: docker-react-app3
